--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "tinyapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "express_server.js",
+  "description": "tiny URL project",
+  "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon -L express_server.js",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kunvar13/tinyapp.git"
+    "url": "git+https://github.com/DarkArtsNinja/tinyapp.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "tiny",
+    "url",
+    "project"
+  ],
+  "author": "Daniel Xue AKA DarkArtsNinja",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kunvar13/tinyapp/issues"
+    "url": "https://github.com/DarkArtsNinja/tinyapp/issues"
   },
-  "homepage": "https://github.com/kunvar13/tinyapp#readme",
+  "homepage": "https://github.com/DarkArtsNinja/tinyapp#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -27,6 +31,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2",
+    "nodemon": "^2.0.13"
   }
 }
